# easyMesh4openEMS

./: README.md  decorateOriginalMethods.py  easyMesher.py  geometryUtils.py  meshProcessing.py  meshingUtils.py  pyproject.toml
Simple_Patch_Antenna_Test_automesh_points/: Simple_Patch_Antenna_Test_automesh_points
Tutorials/: MSL_NotchFilter.py  Patch_Antenna.py  SG13_L2n0_mesh1um_v2.py  SG13_L2n0_mesh1um_v2_automesh.py
easyMesh/: __init__.py  decorateOriginalMethods.py  easyMesher.py  geometryUtils.py  meshProcessing.py  meshingUtils.py
